kubernetes/project-03-gke/grafana-demo.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-demo
  labels:
    app: grafana-demo
  namespace: project-03-k8s
spec:
  selector:
    matchLabels:
      app: grafana-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana-demo
    spec:
      containers:
      - name: grafana-demo
        image: grafana/grafana:7.0.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
