kubernetes/project-03-gke/grafana-demo.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-demo
  labels:
    app: grafana-demo
  namespace: project-03-k8s
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: grafana-demo
